{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 50,
  "lineage": "02086e1a-c2c7-93cc-24e3-98adc713c67e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_rules_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "eastus",
            "name": "app-nsg",
            "resource_group_name": "terraform-course",
            "security_rule": [],
            "tags": {
              "Environment": "using-variables-in-terraform",
              "Managed_By": "Terraform",
              "Name": "terraform-course",
              "Subscription_Id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "app-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_rules_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastus",
            "name": "web-nsg",
            "resource_group_name": "terraform-course",
            "security_rule": [],
            "tags": {
              "Environment": "using-variables-in-terraform",
              "Managed_By": "Terraform",
              "Name": "terraform-course",
              "Subscription_Id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/app-internal",
            "name": "app-internal",
            "network_security_group_name": "app-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "192.90.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "app-internal",
            "network_security_group_name": "app-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_rules_app",
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/web-http",
            "name": "web-http",
            "network_security_group_name": "web-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web-http",
            "network_security_group_name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_rules_web",
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/web-https",
            "name": "web-https",
            "network_security_group_name": "web-nsg",
            "priority": 800,
            "protocol": "Tcp",
            "resource_group_name": "terraform-course",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web-https",
            "network_security_group_name": "web-nsg",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_rules_web",
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.90.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-course",
            "virtual_network_name": "vnet-terraform-course"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-subnet",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c",
            "virtual_network_name": "vnet-terraform-course"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.azure_vnet",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.90.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-course",
            "virtual_network_name": "vnet-terraform-course"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-subnet",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c",
            "virtual_network_name": "vnet-terraform-course"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.azure_vnet",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_rules_app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.azure_vnet",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_rules_web",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.azure_vnet",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azure_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.90.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "51e37099-3bc4-4a31-b63e-ddf88a2143e9",
            "id": "/subscriptions/3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c/resourceGroups/terraform-course/providers/Microsoft.Network/virtualNetworks/vnet-terraform-course",
            "location": "eastus",
            "name": "vnet-terraform-course",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "terraform-course",
            "tags": {
              "Environment": "using-variables-in-terraform",
              "Managed_By": "Terraform",
              "Name": "terraform-course",
              "Subscription_Id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-terraform-course",
            "resource_group_name": "terraform-course",
            "subscription_id": "3b100e99-4c4e-4ae2-aef5-a7d4a50e9e6c"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "data.azurerm_location.current",
            "data.azurerm_subscription.current"
          ]
        }
      ]
    }
  ]
}